# mne-cpp

./: .clang-format  .clang-format_old  .clangd  .gitignore  .gitmodules  .ipfinder_hu56thzl  .qmake.stash  .travis.yml  ACKNOWLEDGEMENT.md  ACKNOWLEDGEMENT.rst  ACKNOWLEDGEMENT.txt  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE.md  LICENSE.txt  README.md  README.rst  README.txt  \  appveyor.yml  buildAll.pro  codecov.yml  config2.py  documentation  h  init.bat  init.sh  mne-cpp-global.pri  mne-cpp.pri  mne-cpp.pro  mne-cpp_doxyfile  report.txt  stable.h  testing.cpp
cmake/qt_probe/: CMakeLists.txt
doc/: .gitignore  .~lock.Fiff_MNE_Functions.xlsx#  CMakeLists.txt  Doxyfile  Doxyfile.internal  Fiff_MNE_Functions.xlsx  README.md  api_registry.json  build-api-docs.sh  build-internal-docs.sh  documentation.html  mne-cpp_doxyfile  mne-cpp_doxyfile_release  pdfDocumentationGenerator.py
doc/UML/: MNE-CPP.mdj  Readme.txt
doc/api_overviews/: connectivity.mdx  disp3d.mdx  dsp.mdx  fiff.mdx  fwd.mdx  inverse.mdx  ml.mdx  mna.mdx  mne.mdx  sts.mdx
doc/dev-notes/: gap-analysis.md  optimization-requirements.md  v2.2.0-requirements.md  v2.3.0-requirements.md
doc/doxygen/: DoxygenLayout.xml  about.md  doxygen-custom.css  header.html  mne-cpp_doxyfile  overview.md
doc/doxygen/doxygen-awesome/: VERSION  doxygen-awesome-darkmode-toggle.js
doc/gh-pages/: README.md  _config.docker.yml  _config.yml  blabla.md  cite.md  contact.md  feature_catalogue.md  index.md  overview.md  projects.md  publication.md  started.md  team.md  trash.py
doc/gh-pages/pages/: community.md  contact.md  conv_style.md  doc.md  eeg_amp_scan.md  learn.md  overview.md  projects.md  qtwasmtutorial.md  source_loc_example.md  started.md
doc/html/: _baby_m_e_g_2collectorsocket_8cpp_source.html  _baby_m_e_g_2collectorsocket_8h_source.html  _baby_m_e_g_2dacqserver_8cpp_source.html  _baby_m_e_g_2dacqserver_8h_source.html  _baby_m_e_g_2shmemsocket_8cpp_source.html  _baby_m_e_g_2shmemsocket_8h_source.html  _baby_m_e_g_2types__definitions_8h_source.html  _i_alert_8h.html  _i_alert_8h_source.html  _i_algorithm_8h.html  _i_algorithm_8h_source.html  _i_connector_8h.html  _i_connector_8h_source.html  _i_i_o_8h.html  _i_i_o_8h_source.html  _i_inverse_algorithm_8h_source.html  _i_measurementacceptor_8cpp.html  _i_measurementacceptor_8cpp_source.html  _i_measurementacceptor_8h.html  _i_measurementacceptor_8h_source.html  _i_measurementprovider_8cpp.html  _i_measurementprovider_8cpp_source.html  _i_measurementprovider_8h.html  _i_measurementprovider_8h_source.html  _i_module_8h.html  _i_module_8h_source.html  _i_plugin_8h.html  _i_plugin_8h_source.html  _i_r_t_algorithm_8h.html  _i_r_t_algorithm_8h_source.html  _i_r_t_record_8h.html  _i_r_t_record_8h_source.html  _i_r_t_visualization_8h.html  _i_r_t_visualization_8h_source.html  _i_sensor_8h.html  _i_sensor_8h_source.html  _i_server_8h.html  _i_server_8h_source.html  _m_n_e_2disp_2filterwindow_8cpp_source.html  _m_n_e_2disp_2filterwindow_8h_source.html  (+3756 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_5f.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  (+247 more)
doc/pages/: CONTENT.md  CONTRIBUTING.md  DEVELOP.md  GETTING_STARTED.md  binaries.md  build_run_depl_pack.md  buildguide.md  community.md  contact.md  contribute.md  doc.md  footer.html  header.html  learn.md  mainpage.txt  neuromag.md  overview.md  partners.md  scan_plugin.md  setup.md  ssvep_bci_example.md
doc/pdf/: References.bib  doc.tex  mne_cpp.py  mnecpp_doc.tex  pdfDocumentationGenerator.py  techpubs.bst  trash.py
doc/qt-creator_doc/: mne-cpp.qch
doc/release/v2.2.0/: coverage-report.md
doc/roadmap/: feature_requests_MNE2  feature_requests_MNE_v1_v2
doc/style/: DoxygenLayout.xml  header.html
doc/website/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.api.generated.ts  sidebars.ts
doc/website/docs/: cite.md  cite.mdx  contact.md  contact.mdx  feature-catalogue.mdx  overview.md  overview.mdx  projects.mdx  publications.md  publications.mdx
doc/website/screenshots/: manifest.json
doc/wiki/: Home.md  Release-Process.md  Roadmap.md  _Footer.md  _Sidebar.md
src/: CMakeLists.txt
src/applications/: CMakeLists.txt  applications.pro
src/applications/mne_add_patch_info/: main.cpp
src/applications/mne_add_to_meas_info/: main.cpp
src/applications/mne_align/: CMakeLists.txt  acquired_points.h  align_3d_view.cpp  align_3d_view.h  align_wizard.cpp  align_wizard.h  fastrak_parser.h  fasttrak_parser.cpp  fasttrak_parser.h  main.cpp  mne_align.cpp  mne_align.h  polhemus_connection.cpp  polhemus_connection.h
src/applications/mne_analyze/: CMakeLists.txt
src/applications/mne_analyze_studio/: CMakeLists.txt  run.sh
src/applications/mne_annot2labels/: CMakeLists.txt  main.cpp
src/applications/mne_anonymize/: CMakeLists.txt  apphandler.cpp  apphandler.h  fiffanonymizer.cpp  mainwindow.cpp  mainwindow.h  settingscontrollercl.cpp  settingscontrollercl.h  settingscontrollergui.cpp
src/applications/mne_average_forward_solutions/: main.cpp
src/applications/mne_brain_vision2fiff/: main.cpp
src/applications/mne_browse/: CMakeLists.txt  main.cpp  run.bat  run.sh
src/applications/mne_check_surface/: main.cpp
src/applications/mne_collect_transforms/: CMakeLists.txt  main.cpp
src/applications/mne_compare_fif_files/: main.cpp
src/applications/mne_compensate_data/: main.cpp
src/applications/mne_compute_mne/: CMakeLists.txt  main.cpp
src/applications/mne_compute_raw_inverse/: CMakeLists.txt  main.cpp
src/examples/: CMakeLists.txt  examples.pro
src/examples/ex_coreg/: main.cpp  (+2 more)
src/libraries/: CMakeLists.txt
src/testframes/: CMakeLists.txt
src/tools/: CMakeLists.txt
(+9506 files in other folders)
